--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.teachmeskills.kotlinsample">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,10 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinSample">
         <activity
+            android:name=".customlivedata.CustomLiveDataActivity"
+            android:exported="false" />
+        <activity
             android:name=".AkamaiViewModelActivity"
             android:exported="false"
             android:screenOrientation="sensor" />
-
         <activity
             android:name=".AkamaiPresenterActivity"
             android:exported="false"
